--- a/pytest.ini
+++ b/pytest.ini
@@ -1,18 +1,19 @@
 [pytest]
-markers = 
+markers =
     API: API based integration test
     UI: selenium based tests
     dev: in-development
 
-env_files = 
+env_files =
     .env
 
-addopts = 
-    -m="UI or API"
+addopts =
+    -m="API or UI"
     -v
     -s
     --headed
     --screenshot-path="artefacts/screenshots"
     --html="artefacts/report/report.html"
     --junitxml="artefacts/report/report.xml"
+    --tracing-path="artefacts/tracing"
     --tracing=retain-on-failure
